# studystudio

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  002_ai_config.sql  DELIVERY_REPORT.md  INSTALL.md  INSTALL.md.bak.20260427_070406  LICENSE  NotesView.vue  README.md  ai_config_router.py  apply_8dim_backend.py  apply_8dim_db.py  apply_8dim_phase1.py  apply_8dim_phase2.py  apply_phase_f.py  apply_studystudio_topic_refresh_v6.py  crypto.py  dev_tools.sh  docker-compose.yml  docker-compose.yml.bak.manual_20260413_122116  docker-compose.yml.bak.vol_20260413_202329  fresh_install.sh  fresh_install_selfextract.sh  install.sh  install_phase1.sh  llm_gateway.py  package-lock.json  patch.sh  patch_ai_config_router.py  patch_h6_backend.py  patch_review_backend.py  project_analysis.md  pyproject.toml  pytest.ini  requirements.txt  studystudio_snapshot.txt  tmp_chat_req.json  tmp_chat_resp.json  (+6 more)
.patch_backup_phase0/: docker-compose.yml.bak  learner_service.py.bak  normalization_service.py.bak  teaching_service.py.bak  teaching_service.py.bak2
.patch_backup_phase_b/: main.py.bak  routers.py.bak  tutorial_tasks.py.bak
.patch_backup_phase_e/: admin_router.py.bak  knowledge_tasks.py.bak  tutorial_tasks.py.bak
contracts/: learner_tutorial_teaching.yaml
devdocs/: PROJECT_LOG_V2_管线优化记录.md  README.md  SystemHealthView双重data解包修复_20260430.md  adaptive_learning_gap_analysis.md  course_generation_architecture_changelog.md  course_generation_architecture_v2.2-final.md  course_generation_implementation_plan.md  design_philosophy.md  social_learning_design.docx  (+10 more)
(+285 files in other folders)
