[tool.poetry]
name = "adaptive-learning-platform"
version = "1.0.0"
description = "自适应学习平台 - 后端服务"
authors = ["Platform Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pgvector = "^0.3.0"
redis = {extras = ["asyncio"], version = "^5.0.3"}
celery = {extras = ["redis"], version = "^5.3.6"}
aio-pika = "^9.4.1"
boto3 = "^1.34.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-text-splitters = "^0.2.0"
pypdf = "^4.2.0"
python-docx = "^1.1.0"
chardet = "^5.2.0"
jsonschema = "^4.22.0"
rapidfuzz = "^3.9.0"
structlog = "^24.1.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
black = "^24.4.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
factory-boy = "^3.3.0"
faker = "^24.11.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
